[package]
name = "rabe-bn"
version = "0.4.12"
authors = [
    "Sean Bowe <ewillbefull@gmail.com>",
    "Bramm, Georg <georg.bramm@aisec.fraunhofer.de>"
]
description = "Pairing cryptography with the Barreto-Naehrig curve. Update to use latest rand and serde crates."
keywords = ["pairing","crypto","cryptography"]
readme = "README.md"
homepage = "https://github.com/georgbramm/rabe-bn"
repository = "https://github.com/georgbramm/rabe-bn"
documentation = "https://docs.rs/rabe-bn"
license = "MIT OR Apache-2.0"
exclude = ["bn.iml", "/.idea"]

[[bench]]
name = "api"

[dependencies]
byteorder = "1.3.4"
rand = "0.7.3"
serde = "1.0.118"
serde_derive = "1.0.118"

[dev-dependencies.bincode]
version = "1.0.0"
default-features = false
